src/Skia/Bindings/Sk_canvas.hs


@
void sk_canvas_clip_path_with_operation(sk_canvas_t *ccanvas, const sk_path_t *cpath, sk_clipop_t op, _Bool doAA)
@
-}
foreign import ccall "sk_canvas_clip_path_with_operation" sk_canvas_clip_path_with_operation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_path) -- ^ C argument @"const sk_path_t * cpath"@
  -> Sk_clipop -- ^ C argument @"sk_clipop_t op"@
  -> CBool -- ^ C argument @"_Bool doAA"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_clip_path_with_operation'
foreign import ccall "&sk_canvas_clip_path_with_operation" p'sk_canvas_clip_path_with_operation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_path) -> Sk_clipop -> CBool -> IO (()))

{- | C function signature:

@
void sk_canvas_clip_rrect_with_operation(sk_canvas_t *ccanvas, const sk_rrect_t *crect, sk_clipop_t op, _Bool doAA)
@
-}
foreign import ccall "sk_canvas_clip_rrect_with_operation" sk_canvas_clip_rrect_with_operation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rrect) -- ^ C argument @"const sk_rrect_t * crect"@
  -> Sk_clipop -- ^ C argument @"sk_clipop_t op"@
  -> CBool -- ^ C argument @"_Bool doAA"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_clip_rrect_with_operation'
foreign import ccall "&sk_canvas_clip_rrect_with_operation" p'sk_canvas_clip_rrect_with_operation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rrect) -> Sk_clipop -> CBool -> IO (()))

{- | C function signature:

@
_Bool sk_canvas_get_local_clip_bounds(sk_canvas_t *ccanvas, sk_rect_t *cbounds)
@
-}
foreign import ccall "sk_canvas_get_local_clip_bounds" sk_canvas_get_local_clip_bounds ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"sk_rect_t * cbounds"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_canvas_get_local_clip_bounds'
foreign import ccall "&sk_canvas_get_local_clip_bounds" p'sk_canvas_get_local_clip_bounds ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> IO (CBool))

{- | C function signature:

@
_Bool sk_canvas_get_device_clip_bounds(sk_canvas_t *ccanvas, sk_irect_t *cbounds)
@
-}
foreign import ccall "sk_canvas_get_device_clip_bounds" sk_canvas_get_device_clip_bounds ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_irect) -- ^ C argument @"sk_irect_t * cbounds"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_canvas_get_device_clip_bounds'
foreign import ccall "&sk_canvas_get_device_clip_bounds" p'sk_canvas_get_device_clip_bounds ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_irect) -> IO (CBool))

{- | C function signature:

@
int sk_canvas_save(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_save" sk_canvas_save ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_canvas_save'
foreign import ccall "&sk_canvas_save" p'sk_canvas_save ::
  FunPtr (Ptr (Sk_canvas) -> IO (CInt))

{- | C function signature:

@
int sk_canvas_save_layer(sk_canvas_t *ccanvas, const sk_rect_t *crect, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_save_layer" sk_canvas_save_layer ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * crect"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_canvas_save_layer'
foreign import ccall "&sk_canvas_save_layer" p'sk_canvas_save_layer ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Ptr (Sk_paint) -> IO (CInt))

{- | C function signature:

@
int sk_canvas_save_layer_rec(sk_canvas_t *ccanvas, const sk_canvas_savelayerrec_t *crec)
@
-}
foreign import ccall "sk_canvas_save_layer_rec" sk_canvas_save_layer_rec ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_canvas_savelayerrec) -- ^ C argument @"const sk_canvas_savelayerrec_t * crec"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_canvas_save_layer_rec'
foreign import ccall "&sk_canvas_save_layer_rec" p'sk_canvas_save_layer_rec ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_canvas_savelayerrec) -> IO (CInt))

{- | C function signature:

@
void sk_canvas_restore(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_restore" sk_canvas_restore ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_restore'
foreign import ccall "&sk_canvas_restore" p'sk_canvas_restore ::
  FunPtr (Ptr (Sk_canvas) -> IO (()))

{- | C function signature:

@
void sk_canvas_translate(sk_canvas_t *ccanvas, float dx, float dy)
@
-}
foreign import ccall "sk_canvas_translate" sk_canvas_translate ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float dx"@
  -> CFloat -- ^ C argument @"float dy"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_translate'
foreign import ccall "&sk_canvas_translate" p'sk_canvas_translate ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> CFloat -> IO (()))

{- | C function signature:

@
void sk_canvas_scale(sk_canvas_t *ccanvas, float sx, float sy)
@
-}
foreign import ccall "sk_canvas_scale" sk_canvas_scale ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float sx"@
  -> CFloat -- ^ C argument @"float sy"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_scale'
foreign import ccall "&sk_canvas_scale" p'sk_canvas_scale ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> CFloat -> IO (()))

{- | C function signature:

@
void sk_canvas_rotate_degrees(sk_canvas_t *ccanvas, float degrees)
@
-}
foreign import ccall "sk_canvas_rotate_degrees" sk_canvas_rotate_degrees ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float degrees"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_rotate_degrees'
foreign import ccall "&sk_canvas_rotate_degrees" p'sk_canvas_rotate_degrees ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> IO (()))

{- | C function signature:

@
void sk_canvas_rotate_radians(sk_canvas_t *ccanvas, float radians)
@
-}
foreign import ccall "sk_canvas_rotate_radians" sk_canvas_rotate_radians ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float radians"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_rotate_radians'
foreign import ccall "&sk_canvas_rotate_radians" p'sk_canvas_rotate_radians ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> IO (()))

{- | C function signature:

@
void sk_canvas_skew(sk_canvas_t *ccanvas, float sx, float sy)
@
-}
foreign import ccall "sk_canvas_skew" sk_canvas_skew ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float sx"@
  -> CFloat -- ^ C argument @"float sy"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_skew'
foreign import ccall "&sk_canvas_skew" p'sk_canvas_skew ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> CFloat -> IO (()))

{- | C function signature:

@
void sk_canvas_concat(sk_canvas_t *ccanvas, const sk_matrix44_t *cmatrix)
@
-}
foreign import ccall "sk_canvas_concat" sk_canvas_concat ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_matrix44) -- ^ C argument @"const sk_matrix44_t * cmatrix"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_concat'
foreign import ccall "&sk_canvas_concat" p'sk_canvas_concat ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_matrix44) -> IO (()))

{- | C function signature:

@
_Bool sk_canvas_quick_reject(sk_canvas_t *ccanvas, const sk_rect_t *crect)
@
-}
foreign import ccall "sk_canvas_quick_reject" sk_canvas_quick_reject ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * crect"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'sk_canvas_quick_reject'
foreign import ccall "&sk_canvas_quick_reject" p'sk_canvas_quick_reject ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> IO (CBool))

{- | C function signature:

@
void sk_canvas_clip_region(sk_canvas_t *ccanvas, const sk_region_t *region, sk_clipop_t op)
@
-}
foreign import ccall "sk_canvas_clip_region" sk_canvas_clip_region ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_region) -- ^ C argument @"const sk_region_t * region"@
  -> Sk_clipop -- ^ C argument @"sk_clipop_t op"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_clip_region'
foreign import ccall "&sk_canvas_clip_region" p'sk_canvas_clip_region ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_region) -> Sk_clipop -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_paint(sk_canvas_t *ccanvas, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_paint" sk_canvas_draw_paint ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_paint'
foreign import ccall "&sk_canvas_draw_paint" p'sk_canvas_draw_paint ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_region(sk_canvas_t *ccanvas, const sk_region_t *cregion, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_region" sk_canvas_draw_region ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_region) -- ^ C argument @"const sk_region_t * cregion"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_region'
foreign import ccall "&sk_canvas_draw_region" p'sk_canvas_draw_region ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_region) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_rect(sk_canvas_t *ccanvas, const sk_rect_t *crect, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_rect" sk_canvas_draw_rect ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * crect"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_rect'
foreign import ccall "&sk_canvas_draw_rect" p'sk_canvas_draw_rect ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_rrect(sk_canvas_t *ccanvas, const sk_rrect_t *crect, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_rrect" sk_canvas_draw_rrect ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rrect) -- ^ C argument @"const sk_rrect_t * crect"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_rrect'
foreign import ccall "&sk_canvas_draw_rrect" p'sk_canvas_draw_rrect ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rrect) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_circle(sk_canvas_t *ccanvas, float cx, float cy, float rad, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_circle" sk_canvas_draw_circle ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float cx"@
  -> CFloat -- ^ C argument @"float cy"@
  -> CFloat -- ^ C argument @"float rad"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_circle'
foreign import ccall "&sk_canvas_draw_circle" p'sk_canvas_draw_circle ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> CFloat -> CFloat -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:
